--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,49 @@ img{
   height: 30%;
   width: 30%;
 }
+.modal-footer {
+  padding: 15px;
+  text-align: right;
+  border-top: 1px solid #e5e5e5;
+  background-color: black;
+}
+.modal-footer p{
+  color: white;
+}
+.jumbotron {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  background-image: url("../Images/Chicken.jpg");
+  background-color: #eee;
+}
+.jumbotron h1{
+  color: white;
+  text-align: center;
+}
+.jumbotron h2{
+  color: white;
+  text-align: center;
+}
+.container-fluid {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 80%;
+}
+@media screen and (min-width: 768px) {
+  .jumbotron {
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .container .jumbotron,
+  .container-fluid .jumbotron {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+  .jumbotron h1,
+  .jumbotron .h1 {
+    font-size: 63px;
+  }
+}
